# rfsim

./: .gitignore  MANIFEST.in  README.md  examples.ipynb  setup.py
conda-recipe/: README.md
conda-recipe/recipe/: meta.yaml
rfsim/: installer.py
rfsim/lib/: Animal.cpp  Animal.h  CMakeLists.txt  Cell.cpp  Cell.h  Coordinates.h  Fox.cpp  Fox.h  Landscape.cpp  Landscape.h  Matrix.h  PyWrapper.h  RNGController.h  Rabbit.cpp  Rabbit.h  Xoroshiro256plus.h  clib.cpp  clib.h  main.cpp
rfsim/tests/: test_landscape.py
